--- a/packages/image_picker/image_picker/pubspec.yaml
+++ b/packages/image_picker/image_picker/pubspec.yaml
@@ -24,8 +24,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_plugin_android_lifecycle: ^2.0.1
-  image_picker_for_web: ^2.1.0
-  image_picker_platform_interface: ^2.3.0
+  image_picker_for_web:
+    git:
+      url: git@github.com:alexmay23/plugins.git
+      path: packages/image_picker/image_picker_web
+      ref: fix-ios-video-pick-crash
+  image_picker_platform_interface:
+    git:
+      url: git@github.com:alexmay23/plugins.git
+      path: packages/image_picker/image_picker_platform_interface
+      ref: fix-ios-video-pick-crash
 
 dev_dependencies:
   flutter_test:
