--- a/packages/image_picker/image_picker_for_web/pubspec.yaml
+++ b/packages/image_picker/image_picker_for_web/pubspec.yaml
@@ -21,7 +21,11 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  image_picker_platform_interface: ^2.2.0
+  image_picker_platform_interface:
+    git:
+      url: git@github.com:alexmay23/plugins.git
+      path: packages/image_picker/image_picker_platform_interface
+      ref: fix-ios-video-pick-crash
 
 dev_dependencies:
   flutter_test:
